--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vishwa Vijeta",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
